# doubango

./: .gitignore  CMakeLists.txt  README.md
bindings/: CMakeLists.txt  README.md
bindings/_common/: ActionConfig.h  Common.h  DDebug.cxx  DDebug.h  MediaContent.cxx  MediaSessionMgr.cxx  Msrp.cxx  ProxyConsumer.cxx  ProxyPluginMgr.cxx  ProxyPluginMgr.h  ProxyProducer.cxx  ProxyProducer.h  SipCallback.h  SipEvent.cxx  SipEvent.h  SipSession.cxx  SipSession.h  SipStack.cxx  SipStack.h  SipUri.h  Xcap.cxx  tinyWRAP_config.h
plugins/: CMakeLists.txt
plugins/audio_opensles/: CMakeLists.txt  audio_opensles.cxx  audio_opensles_config.h  audio_opensles_consumer.cxx  audio_opensles_device.h  audio_opensles_device_impl.h  audio_opensles_producer.cxx
plugins/audio_webrtc/: CMakeLists.txt  audio_webrtc.cxx  audio_webrtc_config.h  audio_webrtc_consumer.cxx  audio_webrtc_producer.cxx  audio_webrtc_transport.h  dllmain.cxx
plugins/ipsec_linux/: CMakeLists.txt  ipsec_linux.c  netlink_xfrm.c  netlink_xfrm.h  tool.c
plugins/pluginCUDA/: dllmain_cuda.cxx  plugin_cuda_codec_h264.cxx  plugin_cuda_config.h
plugins/pluginDirectShow/: dllmain_dshow.cxx  plugin_dshow_config.h  plugin_screencast_dshow_producer.cxx  plugin_video_dshow_consumer.cxx  plugin_video_dshow_producer.cxx
plugins/pluginDirectShow/internals/: DSBaseCaptureGraph.h  DSBufferWriter.h  DSCaptureFormat.h  DSCaptureGraph.cxx  DSCaptureGraph.h  DSCaptureUtils.cxx  DSCaptureUtils.h  DSDibHelper.h  DSDisplay.cxx  DSDisplay.h  DSDisplayGraph.h  DSDisplayOverlay.VMR.cxx  DSDisplayOverlay.VMR9.cxx  DSDisplayOverlay.h  DSFrameRateFilter.h  DSGrabber.cxx  DSGrabber.h  DSOutputFilter.cxx  DSOutputFilter.h  DSOutputStream.cxx  DSOutputStream.h  DSPushSource.h  DSScreenCastGraph.cxx  DSScreenCastGraph.h  DSUtils.cxx  DSUtils.h  Resizer.cxx  Resizer.h  VideoFrame.h
plugins/pluginWASAPI/: dllmain_wasapi.cxx  plugin_wasapi_config.h  plugin_wasapi_consumer_audio.cxx  plugin_wasapi_producer_audio.cxx
plugins/pluginWinAudioDSP/: dllmain_audio_dsp.cxx  plugin_audio_dsp_config.h  plugin_audio_dsp_denoiser.cxx  plugin_audio_dsp_resampler.cxx  plugin_audio_dsp_utils.h
plugins/pluginWinDD/: dllmain_dd.cxx  plugin_win_dd_config.h  plugin_win_dd_producer.cxx
plugins/pluginWinIPSecVista/: dllmain_ipsec_vista.c  plugin_win_ipsec_vista.c  plugin_win_ipsec_vista_config.h
plugins/pluginWinMF/: dllmain_mf.cxx  plugin_win_mf_codec_h264.cxx  plugin_win_mf_config.h  plugin_win_mf_consumer_audio.cxx  plugin_win_mf_consumer_video.cxx  plugin_win_mf_converter_video.cxx  plugin_win_mf_producer_audio.cxx  plugin_win_mf_producer_video.cxx
plugins/pluginWinMF/internals/: mf_codec.cxx  mf_codec.h  mf_codec_topology.cxx  mf_codec_topology.h  mf_custom_src.cxx  mf_custom_src.h  mf_sample_grabber.h  mf_sample_queue.h  mf_utils.cxx  mf_utils.h
tinyDAV/: CMakeLists.txt
tinyDAV/include/: tinydav_config.h
tinyDAV/include/tinydav/: tdav.h
tinyDAV/src/: tdav.c  tdav_session_av.c  tdav_win32.c
tinyDAV/src/audio/: tdav_consumer_audio.c  tdav_producer_audio.c  tdav_session_audio.c  tdav_speakup_jitterbuffer.c  tdav_speex_denoise.c  tdav_speex_jitterbuffer.c  tdav_speex_resampler.c  tdav_webrtc_denoise.c
tinyDAV/src/bfcp/: tdav_session_bfcp.c
tinyDAV/src/msrp/: tdav_session_msrp.c
tinyDAV/src/t140/: tdav_consumer_t140.c  tdav_producer_t140.c  tdav_session_t140.c
tinyDAV/src/video/: tdav_consumer_video.c  tdav_converter_video.cxx  tdav_runnable_video.c  tdav_session_video.c
tinyDAV/test/: test.c  test_sessions.h
tinyDEMO/: CMakeLists.txt
tinyDEMO/src/: cmd.c  cmd.h  common.c  common.h  demo_config.h  dssl.c  invite.c  main.c  message.c  options.c  publish.c  register.c  subscribe.c
tinyNET/: CMakeLists.txt
tinyNET/src/: tinynet_config.h  tnet.c  tnet_endianness.c  tnet_endianness.h  tnet_hardwares.h  tnet_nat.c  tnet_poll.c  tnet_poll.h  tnet_proto.h  tnet_proxy_node_socks_plugin.c  tnet_proxy_plugin.c  tnet_socket.c  tnet_socket.h  tnet_transport.c  tnet_transport.h  tnet_transport_cfsocket.c  tnet_transport_poll.c  tnet_transport_win32.c  tnet_types.h  tnet_utils.c  tnet_utils.h
tinyNET/src/dhcp/: tnet_dhcp.c  tnet_dhcp.h  tnet_dhcp_message.c  tnet_dhcp_message.h  tnet_dhcp_option.c  tnet_dhcp_option.h  tnet_dhcp_option_sip.c  tnet_dhcp_option_sip.h
tinyNET/src/dhcp6/: tnet_dhcp6.c  tnet_dhcp6.h  tnet_dhcp6_duid.c  tnet_dhcp6_duid.h  tnet_dhcp6_message.c  tnet_dhcp6_message.h  tnet_dhcp6_option.c  tnet_dhcp6_option.h
tinyNET/src/dns/: tnet_dns.c  tnet_dns.h  tnet_dns_a.c  tnet_dns_aaaa.c  tnet_dns_cname.c  tnet_dns_message.c  tnet_dns_message.h  tnet_dns_mx.c  tnet_dns_naptr.c  tnet_dns_naptr.h  tnet_dns_ns.c  tnet_dns_opt.c  tnet_dns_ptr.c  tnet_dns_regexp.c  tnet_dns_resolvconf.c  tnet_dns_rr.c  tnet_dns_rr.h  tnet_dns_soa.c  tnet_dns_srv.c  tnet_dns_txt.c
tinyNET/src/ice/: tnet_ice.c  tnet_ice.h  tnet_ice_candidate.c  tnet_ice_candidate.h  tnet_ice_ctx.c  tnet_ice_ctx.h  tnet_ice_pair.c
tinyNET/src/stun/: tnet_stun.c  tnet_stun.h  tnet_stun_attr.c  tnet_stun_attribute.c  tnet_stun_message.c  (+6 more)
tinyNET/test/: test.c  test_dns.h  test_ice.h  test_nat.h  test_sockets.h  test_stun.h  test_tls.h  test_transport.h
tinyRTP/: CMakeLists.txt
tinyRTP/include/: tinyrtp_config.h
tinyRTP/src/: trtp_manager.c  trtp_srtp.c
tinyRTP/test/: CMakeLists.txt  test.c  test_manager.h  test_parser.h
tinySAK/: CMakeLists.txt
tinySAK/src/: tinysak_config.h  tsk.c  tsk_base64.c  tsk_base64.h  tsk_binaryutils.h  tsk_buffer.c  tsk_buffer.h  tsk_common.h  tsk_condwait.c  tsk_condwait.h  tsk_debug.c  tsk_debug.h  tsk_errno.h  tsk_fsm.c  tsk_fsm.h  tsk_hmac.c  tsk_list.c  tsk_list.h  tsk_md5.c  tsk_md5.h  tsk_memory.h  tsk_mutex.c  tsk_object.c  tsk_object.h  tsk_options.c  tsk_options.h  tsk_params.c  tsk_params.h  tsk_plugin.c  tsk_ragel_state.h  tsk_runnable.c  tsk_runnable.h  tsk_safeobj.h  tsk_semaphore.c  tsk_sha1.c  tsk_sha1.h  tsk_string.c  tsk_string.h  tsk_thread.c  tsk_thread.h  (+7 more)
tinySAK/test/: test.c  test_base64.h  test_fsm.h  test_heap.h  test_md5.h  test_mutex.h  test_object.h  test_params.h  test_runnable.h  test_sha1.h  test_timer.h
(+648 files in other folders)
