cmake_minimum_required(VERSION 3.16)
get_filename_component(name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${name})

file(GLOB src src/*.c src/*/*.c src/*/*/*.c)
add_library(${name} ${src})
target_include_directories(${name} PUBLIC include)
target_link_libraries(${name} tinyRTP tinyBFCP tinyMSRP)
if(WITH_OPUS)
    target_link_libraries(${name} Opus::lib)
endif()
if(WITH_AMR)
    target_link_libraries(${name} AMR::lib)
endif()
if(NOT MSVC)
    target_link_libraries(${name} m)
endif()
if(WIN32)
  target_link_libraries(${name} shlwapi windowsapp)
endif()

#add_subdirectory(test)
