cmake_minimum_required(VERSION 3.16)
get_filename_component(name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${name})

find_file(IFADDR ifaddrs.h)
find_package(OpenSSL REQUIRED)

file(GLOB src src/*.c src/*/*.c)
add_library(${name} ${src})
target_include_directories(${name} PUBLIC src)
if(IFADDR)
    target_compile_definitions(${name} PRIVATE HAVE_IFADDRS_H HAVE_GETIFADDRS)
endif()
target_compile_definitions(${name} PUBLIC HAVE_OPENSSL)
target_link_libraries(${name} tinySAK OpenSSL::SSL resolv)
if(WIN32)
  target_link_libraries(${name} wsock32 ws2_32 Iphlpapi)
endif()

file(GLOB tests test/*.c)
foreach(test_src ${tests})
    get_filename_component(test ${test_src} NAME_WE)
    add_executable(${test}-${name} ${test_src})
    target_link_libraries(${test}-${name} ${name})
    add_test(${name} ./${test}-${name})
endforeach()

