cmake_minimum_required(VERSION 3.16)
get_filename_component(name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
project(${name})

if(DOXYGEN_FOUND)
doxygen_add_docs(api-${name} ${CMAKE_CURRENT_SOURCE_DIR} ALL)
endif()

file(GLOB src src/*.c src/*/*.c)
add_library(${name} ${src})
target_include_directories(${name} PUBLIC src)
if(WIN32)
  target_link_libraries(${name} windowsapp)
endif()

#file(GLOB tests test/*.c)
#foreach(test_src ${tests})
#    get_filename_component(test ${test_src} NAME_WE)
#    add_executable(${test}-${name} ${test_src})
#    target_link_libraries(${test}-${name} ${name})
#    if(APPLE)
#        target_link_libraries(${test}-${name} "-framework Foundation" "-framework IOKit")
#    endif()
#    add_test(${name} ./${test}-${name})
#endforeach()

