file(GLOB tests *.c)
foreach(test_src ${tests})
    get_filename_component(test ${test_src} NAME_WE)
    add_executable(${test}-${name} ${test_src})
    target_link_libraries(${test}-${name} ${name})
    add_test(${name} ./${test}-${name})
    #set_property(TEST ${name} PROPERTY FAIL_REGULAR_EXPRESSION "FAIL")
endforeach()
